[package]
name = "azi"
version = "0.1.0"
authors = ["Pascal"]
edition = "2018"

homepage = "https://github.com/pascalgn/azi"
description = "Show Azure information"
readme = "README.md"
keywords = ["azure", "cli"]
categories = ["command-line-interface"]
license = "Apache-2.0"

[[bin]]
name = "azi"
path = "src/main.rs"

[dependencies]
dirs = "1.0"
env_logger = "0.6"
lazy_static = "1.3.0"
log = "0.4"
regex = "1.1"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
