[package]
name = "azi"
version = "0.3.1"
authors = ["Pascal"]
edition = "2018"

homepage = "https://github.com/pascalgn/azi"
description = "Show Azure information"
readme = "README.md"
keywords = ["azure", "cli"]
categories = ["command-line-interface"]
license = "Apache-2.0"

[[bin]]
name = "azi"
path = "src/main.rs"

[dependencies]
base64 = "0.10"
colored = "1.8"
curl = { version = "0.4.21", features = ["static-curl", "static-ssl"] }
dirs = "1.0"
env_logger = "0.6"
humantime = "1.2"
lazy_static = "1.3.0"
log = "0.4"
regex = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
url = "1.7"

[profile.release]
lto = true
