[package]
name = "azi"
version = "0.5.3"
authors = ["Pascal"]
edition = "2018"

homepage = "https://github.com/azrtools/azi"
description = "Show Azure information"
readme = "README.md"
keywords = ["azure", "cli"]
categories = ["command-line-interface"]
license = "Apache-2.0"

[[bin]]
name = "azi"
path = "src/main.rs"

[dependencies]
base64 = "0.13"
chrono = "0.4"
colored = "2.0"
dirs = "4.0"
env_logger = "0.9"
lazy_static = "1.4"
log = "0.4"
regex = "1.5"
rustls = { version = "0.23", features = ["ring", "logging", "std", "tls12"], default-features = false }
rustls-pemfile = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
ureq = "2.4"
url = "2.2"
yaml-rust = "0.4"

[profile.release]
lto = true
